# jobs_finder

./: .dockerignore  2 hours.py  Dockerfile  README.md  bot_settings.py  docker-compose.yml  job_example.json  main.py  pyproject.toml  schemas.py  settings.py
bot/: html_parser.py  main.py  send_job_info.py
bot/fsm/: schemas.py
bot/keyboards/: menu.py  start.py
bot/routers/: __init__.py  query.py  request.py  start.py
db/: config.py  models.py
migrations/: env.py
migrations/versions/: 91696f17b7f0_init_schema.py
parsers/: job.py  job_links.py
perfectly_parsers/: perfectly_job.py
repo/: request.py  user.py  vacancies.py
services/: request_services.py  users_service.py
utils/: bot_settings.py  my_decorators.py  settings.py
