[project]
name = "jobs-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "celery>=5.6.3",
    "docker>=7.1.0",
    "faststream>=0.7.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
